# queries
# spmv compile error(ignore this now)
# foreach(PROG bfs bfs_sync pagerank pagerank_sync wcc wcc_sync spmv spmv_sync bc bc_sync)
# add_compile_options(-g -fno-omit-frame-pointer)

foreach(PROG bfs bfs_sync pagerank pagerank_sync wcc wcc_sync bc bc_sync)
    add_executable(${PROG} ${PROG}.cpp boilerplate.cpp ../src/Runtime.cpp ${CORE_HEADERS})
    target_link_libraries(${PROG} PUBLIC Threads::Threads
                            gllvm
                            galois_shmem
                            tcmalloc
                            bpf)
endforeach()

# tools
foreach(PROG convert)
    add_executable(${PROG} ${PROG}.cpp boilerplate.cpp ../src/Runtime.cpp ${CORE_HEADERS})
    target_link_libraries(${PROG} PUBLIC Threads::Threads
                            gllvm
                            galois_shmem
                            tcmalloc
                            bpf)
endforeach()
